feat: Initial structure of project

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+*.log
+.DS_STORE
+EOF
 
 ### STS ###
 .apt_generated
